--- a/angular/package.json
+++ b/angular/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.0.1",
     "graphql": "^15.0.0",
     "ng-toastr": "^1.0.0",
+    "ngrx-store-localstorage": "^12.0.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
