--- a/angular/package.json
+++ b/angular/package.json
@@ -34,6 +34,7 @@
     "ckeditor4-angular": "^2.2.1",
     "firebase": "^8.8.0",
     "graphql": "^15.0.0",
+    "jspdf": "^2.3.1",
     "ng-select2": "^1.2.5",
     "ng-toastr": "^1.0.0",
     "ngrx-store-localstorage": "^12.0.0",
