--- a/angular/package.json
+++ b/angular/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "@apollo/client": "^3.3.21",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ngrx/effects": "^12.0.0",
     "@ngrx/store": "^12.0.0",
     "@ngrx/store-devtools": "^12.0.0",
@@ -40,6 +43,8 @@
     "ngrx-store-localstorage": "^12.0.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-pagination": "^5.1.1",
+    "ngx-print": "^1.2.1",
+    "ngx-sharebuttons": "^8.0.5",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "select2": "*",
