--- a/graphql/package.json
+++ b/graphql/package.json
@@ -8,7 +8,8 @@
     "build": "npm -s run clean && npm -s run generate && tsc",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma generate",
-    "generate:nexus": "ts-node --transpile-only src/schema"
+    "generate:nexus": "ts-node --transpile-only src/schema",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "2.22.1",
@@ -23,9 +24,14 @@
     "nexus": "1.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "@types/node": "^12.20.13",
+    "get-port": "^5.1.1",
+    "graphql-request": "^3.5.0",
+    "jest": "^27.2.0",
     "jsonwebtoken": "^8.5.1",
     "prisma": "2.22.1",
+    "ts-jest": "^27.0.5",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
