--- a/graphql/tsconfig.json
+++ b/graphql/tsconfig.json
@@ -5,7 +5,7 @@
     "esModuleInterop": true,
     "lib": ["esnext"],
     "strict": true,
-    "types": ["node"]
+    "types": ["node", "jest"]
   },
   "include": ["src/**/*"]
 }
