finish test angular and backend with jest and klarma

--- a/angular/package.json
+++ b/angular/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "menutest": "ng test --include src/app/shared/menudown/menudown.component.spec.ts",
+    "logintest": "ng test --include src/app/modules/login/login.component.spec.ts",
+    "list-trend-test": "ng test --include src/app/pages/listtrends/listtrends.component.spec.ts"
   },
   "private": true,
   "dependencies": {
@@ -35,11 +38,14 @@
     "apollo-link": "^1.2.14",
     "bootstrap": "^5.0.1",
     "ckeditor4-angular": "^2.2.1",
+    "devextreme": "21.1.6",
+    "devextreme-angular": "21.1.6",
     "firebase": "^8.8.0",
     "graphql": "^15.0.0",
     "jspdf": "^2.3.1",
     "ng-select2": "^1.2.5",
     "ng-toastr": "^1.0.0",
+    "ng2-pdf-viewer": "^7.0.1",
     "ngrx-store-localstorage": "^12.0.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-pagination": "^5.1.1",
@@ -56,8 +62,19 @@
     "@angular-devkit/build-angular": "~12.0.0",
     "@angular/cli": "~12.0.0",
     "@angular/compiler-cli": "~12.0.0",
+    "@apollo/client": "^3.3.21",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@ngrx/effects": "^12.0.0",
+    "@ngrx/store": "^12.0.0",
+    "@ngrx/store-devtools": "^12.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "apollo-angular": "^2.6.0",
+    "apollo-angular-link-http": "^1.11.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link": "^1.2.14",
     "autoprefixer": "^10.2.5",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
