--- a/angular/tsconfig.json
+++ b/angular/tsconfig.json
@@ -14,7 +14,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2017",
-    "module": "es2020",
+    "module": "commonjs",
     "lib": [
       "es2018",
       "dom",
@@ -23,6 +23,9 @@
     "jsx": "react",
     "allowSyntheticDefaultImports": true
   },
+  "exclude": [
+    "./node_modules/**/*"
+  ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
