--- a/graphql/package.json
+++ b/graphql/package.json
@@ -24,7 +24,9 @@
     "nexus": "1.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.0.1",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^12.20.13",
     "get-port": "^5.1.1",
     "graphql-request": "^3.5.0",
